# leonai

./: .coverage  .env.example  .gitignore  AI_CONTRIBUTORS.md  CHLOE_GITHUB_ROLLOUT_059.md  CLAUDE.md  DECORATOR_README.md  HUNTER_GITHUB_ROLLOUT_002.md  HUNTER_GITHUB_ROLLOUT_015.md  HUNTER_GITHUB_ROLLOUT_018.md  HUNTER_GITHUB_ROLLOUT_019.md  HUNTER_GITHUB_ROLLOUT_020.md  HUNTER_GITHUB_ROLLOUT_021.md  INDEX.md  INTEGRATION_STATUS.md  LANGCHAIN_CACHING_RESEARCH_INDEX.md  LANGCHAIN_CACHING_RESEARCH_SUMMARY.md  LANGCHAIN_TOKEN_USAGE_EXAMPLES.md  LANGCHAIN_TOKEN_USAGE_INDEX.md  LANGCHAIN_TOKEN_USAGE_QUICK_REFERENCE.md  LANGCHAIN_TOKEN_USAGE_RESEARCH.md  LANGCHAIN_TOKEN_USAGE_SUMMARY.md  MODEL_CONFIG_TECHNICAL_ANALYSIS.md  MODEL_PRICING_QUICK_LOOKUP.txt  MODEL_PRICING_SUMMARY.md  OPENCLAW_PROMPT_CACHING_ANALYSIS.md  OPENCLAW_RESEARCH_INDEX.md  OPENCODE_CACHING_CODE_EXAMPLES.md  OPENCODE_CACHING_SUMMARY.md  OPENCODE_PROMPT_CACHING_ANALYSIS.md  OPENCODE_RESEARCH_INDEX.md  PROGRESS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README.zh.md  README_RESEARCH.md  RELEASE_NOTES_v0.3.0.md  RESEARCH_REPORT.md  RESEARCH_SUMMARY.md  (+41 more)
.claude/: settings.json
.playwright-cli/: page-2026-03-07T02-51-20-684Z.yml  page-2026-03-07T02-51-41-971Z.yml  page-2026-03-07T02-52-04-070Z.yml  page-2026-03-07T02-52-14-804Z.yml  page-2026-03-07T02-52-22-437Z.yml  page-2026-03-07T05-39-04-712Z.yml  page-2026-03-07T05-39-30-232Z.yml  page-2026-03-07T05-41-43-040Z.yml  page-2026-03-07T05-42-15-148Z.yml  page-2026-03-07T05-42-38-569Z.yml  page-2026-03-07T05-42-52-597Z.yml  page-2026-03-07T05-43-15-048Z.yml  page-2026-03-07T06-01-39-601Z.yml  page-2026-03-07T06-01-55-898Z.yml  page-2026-03-07T06-02-10-407Z.yml  page-2026-03-07T06-02-53-486Z.yml  page-2026-03-07T06-18-33-160Z.yml  page-2026-03-07T06-18-40-065Z.yml  page-2026-03-07T06-19-24-046Z.yml  page-2026-03-07T06-19-31-760Z.yml  page-2026-03-07T06-21-02-391Z.yml  page-2026-03-07T06-21-37-098Z.yml  page-2026-03-07T06-31-41-742Z.yml  page-2026-03-07T06-32-16-894Z.yml
agents/: general.md  plan.md
artifacts/: alibaba-zgc-tunnel-proof-artifact.md  hunter-rollout-002-smoke.txt  open_pr_metadata.json  path_a_tunnel_preflight_artifact.md  pr-evidence-redaction-proof-2026-02-22.md  pr-open-sync-snapshot-2026-02-22.txt  pr_marker_check_output.txt
cat-pointer/: README.md  start.sh
cat-pointer/mcp-server/: __init__.py  pyproject.toml  server.py
config/: __init__.py  loader.py  migrate.py  models_loader.py  models_schema.py  observation_loader.py  observation_schema.py  schema.py  types.py
core/: __init__.py  display.py  model_params.py  operations.py  prompt_caching.py  search.py
docs/: 2026-02-08_e2e-test-results.md  2026-02-08_final-e2e-report.md  2026-02-08_final-terminal-session-architecture.html  2026-02-08_frontend-flow-validation.md  2026-02-08_terminal-lease-architecture.html  2026-02-08_terminal-persistence-options.html  AI_CONTRIBUTORS.md  ARCHITECTURE.md  BASH_MIDDLEWARE_GUIDE.md  BASH_SESSION_PERSISTENCE.md  BUGFIX_SUMMARY.md  CASCADE_AGENT.md  CHANGELOG_FORMAT_FIXES.md  CLI_USAGE.md  CRITICAL_FIX.md  FINAL_FIXES.md  HISTORY_NAVIGATION.md  PERFORMANCE_OPTIMIZATIONS.md  PLUGIN_SYSTEM.md  PROACTIVE_INTELLIGENCE.md  PROJECT_STRUCTURE.md  QUEUE_STATE_RESEARCH_INDEX.md  QUICK_TUI_TEST.md  README-state-management.md  README_CN.md  README_SAFE_BASH.md  SANDBOX.md  SUMMARY.md  TUI_ARCHITECTURE.md  TUI_OPTIMIZATIONS.md  TUI_USAGE.md  agent-biology-model.md  architecture-discussion-summary.md  bash_framework.md  chat-refactor-analysis.md  chat-refactor-spec.md  configuration.md  database-abstraction-plan.md  getting-started.md  memory-system-analysis.md  (+18 more)
eval/: __init__.py  collector.py  models.py  repo.py  storage.py  tracer.py
examples/: cascade_demo.py  chat.py  check_checkpoint.py  examples.py  langchain_tool_image_openai.py  langfuse_query.py  quick_start.py  run_id_demo.py  test_api_cancel.py  test_backend_simple.py  test_bash_long_task.py  test_cancel_llm.py  test_cancel_multi_tool.py  test_cancel_simple.py  test_cancel_tool.py  test_checkpoint_simple.py  test_long_task.py  test_minimal.py  test_pause.py  test_read_file_image.py  test_real_cancel.py  test_web_cancel.py  test_web_cancel_simple.py
history/: command_update.md
middleware/: __init__.py  anthropic_tools.py  extensible_bash.py  file_search.py  filesystem.py  model_params.py  prompt_caching.py  search.py
profiles/: README.md  cat-pointer.yaml  coder.yaml  default.yaml  mcp-enabled.yaml  researcher.yaml  reviewer.yaml  skills-enabled.yaml
sandbox/: __init__.py  agentbay.py  base.py  capability.py  chat_session.py  config.py  daytona.py  db.py  docker.py  e2b.py  executor.py  file_backend.py  lease.py  lifecycle.py  local.py  manager.py  manager_new.py  message_queue.py  metadata.py  provider.py  provider_events.py  remote.py  remote_store.py  resource_snapshot.py  runtime.py  session_store.py  shell_output.py  sqlite_queue.py  sqlite_store.py  terminal.py  thread_context.py  (+3 more)
(+986 files in other folders)
