[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leonai"
version = "0.3.0"
description = "Leon - Proactive AI coding assistant with persistent memory and TUI"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "nmhjklnm"}
]
keywords = ["ai", "assistant", "langchain", "anthropic", "claude", "tui", "coding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain>=1.2.6",
    "langchain-anthropic>=1.3.1",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "textual>=1.0.0",
    "rich>=13.0.0",
    "pyperclip>=1.11.0",
    "langchain-openai>=1.1.7",
    "duckduckgo-search>=8.1.1",
    "httpx>=0.28.1",
    "fastapi>=0.129.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "langchain-mcp-adapters>=0.1.0",
]

[project.optional-dependencies]
pdf = ["pymupdf>=1.24.0"]
pptx = ["python-pptx>=1.0.0"]
docs = ["pymupdf>=1.24.0", "python-pptx>=1.0.0"]
sandbox = ["wuying-agentbay-sdk>=0.10.0"]
e2b = ["e2b>=2.13.0"]
daytona = ["daytona-sdk>=0.10.0", "python-socks>=2.7.0"]
eval = ["httpx-sse>=0.4.0"]
otel = ["opentelemetry-api>=1.20.0", "opentelemetry-sdk>=1.20.0", "opentelemetry-exporter-otlp>=1.20.0"]
all = ["pymupdf>=1.24.0", "python-pptx>=1.0.0", "wuying-agentbay-sdk>=0.10.0", "e2b>=2.13.0", "daytona-sdk>=0.10.0", "python-socks>=2.7.0", "httpx-sse>=0.4.0"]

[project.scripts]
leonai = "tui.leon_cli:main"

[project.urls]
Homepage = "https://github.com/Ju-Yi-AI-Lab/leonai"
Repository = "https://github.com/Ju-Yi-AI-Lab/leonai"
Issues = "https://github.com/Ju-Yi-AI-Lab/leonai/issues"

[tool.setuptools]
packages = [
    "config",
    "config.defaults",
    "config.defaults.agents",
    "core",
    "core.command",
    "core.command.hooks",
    "core.command.bash",
    "core.command.zsh",
    "core.command.powershell",
    "core.filesystem",
    "core.filesystem.read",
    "core.filesystem.read.readers",
    "core.queue",
    "core.memory",
    "core.skills",
    "core.monitor",
    "core.task",
    "core.todo",
    "core.web",
    "core.web.fetchers",
    "core.web.searchers",
    "sandbox",
    "sandbox.interfaces",
    "sandbox.providers",
    "tui",
    "tui.widgets",
    "eval",
    "eval.harness",
]
py-modules = ["agent", "agent_profile"]

[tool.setuptools.package-data]
"config.defaults.agents" = ["*.md"]
"eval.scenarios" = ["*.yaml"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]
"examples/*.py" = ["E402"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
