[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cat-pointer-mcp"
version = "0.1.0"
description = "MCP server for cat pointing game"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
cat-pointer-mcp = "server:main"
